# Mesh-Computational-Geometry

./: README.md
TP1/: CMakeLists.txt  OFFparser.cpp  main.cpp
TP1/data/: simpleTestDelauney.off  tetra.off
TP1/include/: circulatorOnFaces.h  circulatorOnVertices.h  face.h  mesh.h  point.h  triangle.h  typedef.h  vertex.h
TP1/src/: OFFparser.cpp  circulatorOnFaces.cpp  circulatorOnVertices.cpp  mesh.cpp  meshChecker.cpp
